
==================  9.6.0 ==================
New Features
---------------------
* SOLR-17141: Implement 'cpuAllowed' query parameter to limit the maximum CPU usage by a running query. (Andrzej Bialecki, Gus Heck, David Smiley)

* SOLR-599: Add a new SolrJ client using the JDK’s built-in Http Client.  (James Dyer)

Improvements
---------------------
* SOLR-17119: When registering or updating a ConfigurablePlugin through the `/cluster/plugin` API,
  config validation exceptions are now propagated to the callers. (Yohann Callea)

* SOLR-16699: Add Collection creation time to CLUSTERSTATUS and COLSTATUS API responses
  (Julien Pilourdault, Paul McArthur, David Smiley)

* SOLR-17038: Expose the term count in /admin/segments handler if fieldInfo=true.
  (Rahul Goswami via David Smiley and Christine Poerschke)

* SOLR-17146: Add DelegatingBackupRepository and alternative checksum verification (Bruno Roustant)

* SOLR-16858: KnnQParser's "Pre-Filtering" behavior is now controlable via local params (hossman)

* SOLR-17145: The INSTALLSHARDDATA API now includes a 'requestid' field when run asynchronously (Jason Gerlowski)

* SOLR-17159: bin/solr post now has proper unit testing.  Users can specify a --dry-run option to
  simulate posting documents without sending them to Solr. (Eric Pugh)

* SOLR-17058: Add 'distrib.statsCache' parameter to disable distributed stats requests at query time. (Wei Wang, Mikhail Khludnev)

* SOLR-16138: Throw a exception when issuing a streaming expression and all cores are down instead of returning 0 documents. (Antoine Bursaux via Eric Pugh)

* SOLR-17172: Add QueryLimits termination to the existing heavy SearchComponent-s. This allows query limits (e.g. timeAllowed,
  cpuAllowed) to terminate expensive operations within components if limits are exceeded. (Andrzej Bialecki)

Optimizations
---------------------
* SOLR-17144: Close searcherExecutor thread per core after 1 minute (Pierre Salagnac, Christine Poerschke)
